fixes for staging
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,8 +212,8 @@ services:
     links:
       - webui:dev.havengrc.com
     environment:
-      - TLS_CERT=/certs/server.pem
-      - TLS_PRIVATE_KEY=/certs/privkey.pem
+      - TLS_CERT=
+      - TLS_PRIVATE_KEY=
       - CLIENT_SECRET=df2ba720-1d10-4d85-940a-6df77ef69baa
       - UPSTREAM_URL=http://dev.havengrc.com/
       - DISCOVERY_URL=http://dev.havengrc.com/auth/realms/havendev
