--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -204,23 +204,26 @@ services:
     build:
       context: gatekeeper/
     ports:
-      - "80:80"
-      - "443:8443"
+      - "80:81"
     volumes:
       - ./gatekeeper/config:/opt/config
       - ./webui/pki:/certs
     links:
-      - webui:dev.havengrc.com
+      - webui
+    # k8s equivalent to extra_hosts is .spec.hostAliases
+    extra_hosts:
+      - "dev.havengrc.com:127.0.0.1"
     environment:
       - TLS_CERT=
       - TLS_PRIVATE_KEY=
       - CLIENT_SECRET=df2ba720-1d10-4d85-940a-6df77ef69baa
-      - UPSTREAM_URL=http://dev.havengrc.com/
+      - UPSTREAM_URL=http://webui/
       - DISCOVERY_URL=http://dev.havengrc.com/auth/realms/havendev
+      - KEYCLOAK_INTERNAL=http://keycloak:8080
       - BASE_URI=
       - REDIRECTION_URL=http://dev.havengrc.com/
       - GATEKEEPER_SESSION_KEY=c01f3736e640ea874d66c3704ddb7a9a
-      - GATEKEEPER_LISTEN_PORT=80
+      - GATEKEEPER_LISTEN_PORT=81
       - SECURE_COOKIE=false
   worker:
     environment:
