--- a/k8s/gatekeeper-deployment.yaml
+++ b/k8s/gatekeeper-deployment.yaml
@@ -12,12 +12,23 @@ spec:
       labels:
         service: gatekeeper
     spec:
+      hostAliases:
+        - ip: "127.0.0.1"
+          hostnames:
+          - "staging.havengrc.com"
       containers:
         - name: gatekeeper
           image: havengrc-docker.jfrog.io/kindlyops/gatekeeper:latest
           env:
             - name: GATEKEEPER_LISTEN_PORT
-              value: 8443
+              value: "8443"
+            - name: GATEKEEPER_SESSION_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: haven-gatekeeper-credentials
+                  key: sessionkey
+            - name: KEYCLOAK_INTERNAL
+              value: "keycloak.haven-production.svc"
             - name: DISCOVERY_URL
               value: "https://staging.havengrc.com/auth/realms/havendev"
             - name: CLIENT_SECRET
