--- a/k8s/gatekeeper-deployment.yaml
+++ b/k8s/gatekeeper-deployment.yaml
@@ -42,7 +42,7 @@ spec:
             - name: KEYCLOAK_SCHEME
               value: "https"
             - name: DISCOVERY_URL
-              value: "http://staging.havengrc.com/auth/realms/havendev"
+              value: "https://staging.havengrc.com/auth/realms/havendev"
             - name: CLIENT_SECRET
               valueFrom:
                 secretKeyRef:
