Refactor for needed proxy options
Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -34,7 +34,11 @@ proxy /api api:3001 {
   transparent
 }
 
-proxy /api/files havenapi:3000 {
+proxy /rpc api:3001 {
+  transparent
+}
+
+proxy /api/reports havenapi:3000 {
   transparent
 }
 
