--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -29,6 +29,10 @@ proxy /auth keycloak:8080 {
   transparent
 }
 
+proxy /oauth/logout keycloak:8080 {
+  transparent
+}
+
 proxy /api api:3001 {
   without /api
   transparent
