--- a/webui/package.json
+++ b/webui/package.json
@@ -49,7 +49,7 @@
     "string-replace-loader": "^2.1.1",
     "style-loader": "^0.23.1",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "uglifyjs-webpack-plugin": "^1.2.4",
+    "terser-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.33.0",
     "webpack-dev-server": "^3.7.1",
