Refactor to change api name to onboarding
Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -42,7 +42,7 @@ proxy /rpc api:3001 {
   transparent
 }
 
-proxy /api/state havenapi:3000 {
+proxy /api/onboarding havenapi:3000 {
   transparent
 }
 
