Refactor to allow post from webui
Adjusts the havenapi to post and respond with the survey results.

Issue #HAV-227

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -54,6 +54,9 @@ proxy /api/registration_funnel havenapi:3000 {
   transparent
 }
 
+proxy /api/surveys havenapi:3000 {
+  transparent
+}
 # this rewrite makes it so anything we are not proxying to api or auth
 # is rewritten to index.html, so that the SPA is served. This is necessary
 # to support path-based-routing in a single page application in cases where
