Update pandoc and adjust pptx for keynote compatibility
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/worker/docker-build/Dockerfile
+++ b/worker/docker-build/Dockerfile
@@ -1,8 +1,9 @@
 FROM  havengrc-docker.jfrog.io/rocker/rstudio:3.4.3
 LABEL maintainer="Kindly Ops, LLC <support@kindlyops.com>"
 
-# RUN apt-get update \
-#     && apt-get install -y zlib1g-dev libproj-dev texlive-full fonts-roboto texlive-fonts-extra xzdec gnupg \
+RUN apt-get update \
+    && apt-get install -y zlib1g-dev libproj-dev xzdec gnupg
+#    texlive-full fonts-roboto texlive-fonts-extra \
 #     && tlmgr init-usertree
 # RUN tlmgr install roboto
 RUN install2.r --deps=TRUE remotes
@@ -20,5 +21,5 @@ RUN install2.r --deps=TRUE cowplot
 RUN install2.r --deps=TRUE likert
 
 # overwrite embedded pandoc to be > 2.2 so that we have pptx output support
-COPY vendor/pandoc-2.3.1/bin/pandoc /usr/local/bin/pandoc
-COPY vendor/pandoc-2.3.1/bin/pandoc-citeproc /usr/local/bin/pandoc-citeproc
+COPY vendor/pandoc-2.7.3/bin/pandoc /usr/local/bin/pandoc
+COPY vendor/pandoc-2.7.3/bin/pandoc-citeproc /usr/local/bin/pandoc-citeproc
