Add primitive feature flag to hide unfinished pages in production
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/havenweb-deployment.yaml
+++ b/k8s/havenweb-deployment.yaml
@@ -16,8 +16,8 @@ spec:
         - name: havenweb
           image: havengrc-docker.jfrog.io/kindlyops/havenweb:latest
           env:
-            - name: ELM_APP_KEYCLOAK_CLIENT_ID
-              value: "havendev"
+            - name: FEATURE_ENV
+              value: "production"
           ports:
             - containerPort: 8081
               protocol: TCP
