--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -53,7 +53,7 @@ spec:
                   name: haven-database-credentials
                   key: password
             - name: SENTRY_ENVIRONMENT
-              value: "staging"
+              value: "production"
             - name: SENTRY_DSN
               valueFrom:
                 secretKeyRef:
