--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -43,9 +43,9 @@ spec:
                   name: haven-database-credentials
                   key: password
             - name: KC_HOST
-              value: https://staging.havengrc.com
+              value: https://www.havengrc.com
             - name: SENTRY_ENVIRONMENT
-              value: "staging"
+              value: "production"
             - name: SENTRY_DSN
               valueFrom:
                 secretKeyRef:
