--- a/webui/package.json
+++ b/webui/package.json
@@ -54,11 +54,10 @@
     "webpack": "^4.35.2",
     "webpack-dev-server": "^3.7.2",
     "webpack-manifest-plugin": "^2.0.3",
-    "whatwg-fetch": "3.0.0"
+    "whatwg-fetch": "3.0.0",
+    "elm-format": "^0.8.1"
   },
   "dependencies": {
-    "babel-runtime": "^6.26.0",
-    "elm-format": "^0.8.1",
     "node-sass-chokidar": "^1.3.5",
     "resolve-url-loader": "^3.1.0"
   }
