--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -20,7 +20,7 @@ header / {
   # Disallow the site to be rendered within a frame (clickjacking protection)
   X-Frame-Options "sameorigin"
   # CSP
-  Content-Security-Policy "default-src 'self' https://www.iubenda.com/; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.iubenda.com; img-src 'self' data: www.gravatar.com; style-src 'self' 'unsafe-inline' https://cdn.iubenda.com;  font-src 'self' data: ;"
+  Content-Security-Policy "default-src 'self' *.iubenda.com; script-src 'self' *.iubenda.com 'unsafe-inline' 'unsafe-eval'; img-src 'self' data: www.gravatar.com *.iubenda.com; style-src 'self' 'unsafe-inline' *.iubenda.com;  frame-src: *.iubenda.com *.consensu.org; font-src 'self' data: ;"
   Feature-Policy "autoplay 'none'; camera 'none'; microphone 'none'; midi 'none'; usb 'none'; vr 'none';"
   Referrer-Policy "strict-origin"
 }
