--- a/webui/package.json
+++ b/webui/package.json
@@ -26,10 +26,10 @@
     "connect-history-api-fallback": "^1.6.0",
     "cosmiconfig": "^5.2.1",
     "css-loader": "^3.0.0",
-    "cypress": "^3.4.0",
     "daemonite-material": "^4.1.1",
     "dotenv": "^8.0.0",
     "elm": "^0.19.0-no-deps",
+    "elm-format": "^0.8.1",
     "elm-hot-webpack-loader": "^1.0.2",
     "elm-test": "^0.19.0-rev6",
     "elm-webpack-loader": "^5.0.0",
@@ -54,8 +54,7 @@
     "webpack": "^4.35.3",
     "webpack-dev-server": "^3.7.2",
     "webpack-manifest-plugin": "^2.0.3",
-    "whatwg-fetch": "3.0.0",
-    "elm-format": "^0.8.1"
+    "whatwg-fetch": "3.0.0"
   },
   "dependencies": {
     "node-sass-chokidar": "^1.3.5",
