Fix local cypress runs.
    ./dca run cypress

Now passes.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.admin.yml
+++ b/docker-compose.admin.yml
@@ -142,10 +142,18 @@ services:
       - ./mjml/templates:/home/mjml/templates
       - ./mjml/dist:/home/mjml/dist
     command: ["templates/*.mjml", "-o", "dist/"]
+  dockerhost:
+    image: qoomon/docker-host
+    cap_add: [ 'NET_ADMIN', 'NET_RAW' ]
+    mem_limit: 8M
+    restart: on-failure
   cypress:
     build:
       context: webui
       dockerfile: Dockerfile-cypress
     links:
-      - gatekeeper:dev.havengrc.com
-    command: ["npx", "cypress", "run"]
+      - gatekeeper
+      - dockerhost:dev.havengrc.com
+    volumes:
+      - ./webui:/e2e
+    command: ["run"]
