--- a/webui/Dockerfile-cypress
+++ b/webui/Dockerfile-cypress
@@ -1,6 +1,4 @@
-FROM        cypress/base:8
+FROM        cypress/included:3.4.0
 MAINTAINER  Kindly Ops, LLC <support@kindlyops.com>
-WORKDIR     /home/node
-ADD         . .
-RUN         npm install --silent cypress
-CMD         ["npx", "cypress", "run"]
+WORKDIR     /e2e
+ENTRYPOINT ["/usr/local/bin/cypress"]
