Move comments to havenapi
This will move the comments api to havenapi.

Issue #HAV-304

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -44,6 +44,11 @@ proxy /rpc api:3001 {
   header_upstream X-Forwarded-Proto {>X-Forwarded-Proto}
 }
 
+proxy /api/comments havenapi:3000 {
+  transparent
+  header_upstream X-Forwarded-Proto {>X-Forwarded-Proto}
+}
+
 proxy /api/onboarding havenapi:3000 {
   transparent
   header_upstream X-Forwarded-Proto {>X-Forwarded-Proto}
