Rework cypress docker network routing strategy
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -214,6 +214,7 @@ jobs:
             - KEYCLOAK_SCHEME: http
             - DISCOVERY_URL: http://dev.havengrc.com/auth/realms/havendev
             - BASE_URI:
+            - GATEKEEPER_INTERNAL: http://gatekeeper:81
           command: |
             # create network for containers
             docker network create -d bridge net0
@@ -256,12 +257,7 @@ jobs:
             docker build -t kindlyops/gatekeeper -f gatekeeper/Dockerfile ./gatekeeper
             docker run -d --volumes-from certs --network net0 --publish 80:81 --name gatekeeper -e DISCOVERY_URL -e UPSTREAM_URL -e REDIRECTION_URL -e GATEKEEPER_LISTEN_PORT -e SECURE_COOKIE -e GATEKEEPER_SESSION_KEY -e KEYCLOAK_INTERNAL -e KEYCLOAK_SCHEME -e DISCOVERY_URL -e BASE_URI kindlyops/gatekeeper:latest
             docker build -t kindlyops/cypress -f webui/Dockerfile-cypress ./webui
-            docker pull qoomon/docker-host:2.2.0
-            docker run -d --name 'dockerhost' -h dev.havengrc.com --cap-add=NET_ADMIN --cap-add=NET_RAW --restart on-failure qoomon/docker-host:2.2.0
-            # disabling cypress run in CircleCI for now
-            # we need some work on TLS certificates to use valid certs with
-            # gatekeeper and webui in order to get this working again.
-            docker run --network net0 kindlyops/cypress run
+            docker run --network net0 -e GATEKEEPER_INTERNAL kindlyops/cypress run
       - store_artifacts:
           path: webui/cypress/videos
       - notify-failed
