--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -257,7 +257,7 @@ jobs:
             docker build -t kindlyops/gatekeeper -f gatekeeper/Dockerfile ./gatekeeper
             docker run -d --volumes-from certs --network net0 --publish 80:81 --name gatekeeper -e DISCOVERY_URL -e UPSTREAM_URL -e REDIRECTION_URL -e GATEKEEPER_LISTEN_PORT -e SECURE_COOKIE -e GATEKEEPER_SESSION_KEY -e KEYCLOAK_INTERNAL -e KEYCLOAK_SCHEME -e DISCOVERY_URL -e BASE_URI kindlyops/gatekeeper:latest
             docker build -t kindlyops/cypress -f webui/Dockerfile-cypress ./webui
-            docker run --network net0 -e GATEKEEPER_INTERNAL -v webui/cypress/videos:/e2e/cypress/videos/ kindlyops/cypress run
+            docker run --network net0 -e GATEKEEPER_INTERNAL -v ./webui/cypress/videos:/e2e/cypress/videos/ kindlyops/cypress run
       - store_artifacts:
           path: webui/cypress/videos
       - notify-failed
