--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,7 +249,7 @@ jobs:
             docker run --volumes-from configs --network net0 -e API_SERVER -e AUTH_SERVER -e BUFFALO_SERVER --workdir /usr/src/app kindlyops/apitest cucumber
             echo $WEBUI_TEST_CERT|base64 -d - > fullchain.pem
             echo $WEBUI_TEST_KEY|base64 -d - > privkey.pem
-            # creating dummy container which will hold a volume with config
+            # creating dummy container which will hold a volume with certs
             docker create -v /certs --name certs alpine:3.4 /bin/true
             docker cp fullchain.pem certs:/certs
             docker cp privkey.pem certs:/certs
@@ -257,7 +257,10 @@ jobs:
             docker build -t kindlyops/gatekeeper -f gatekeeper/Dockerfile ./gatekeeper
             docker run -d --volumes-from certs --network net0 --publish 80:81 --name gatekeeper -e DISCOVERY_URL -e UPSTREAM_URL -e REDIRECTION_URL -e GATEKEEPER_LISTEN_PORT -e SECURE_COOKIE -e GATEKEEPER_SESSION_KEY -e KEYCLOAK_INTERNAL -e KEYCLOAK_SCHEME -e DISCOVERY_URL -e BASE_URI kindlyops/gatekeeper:latest
             docker build -t kindlyops/cypress -f webui/Dockerfile-cypress ./webui
-            docker run --network net0 -e GATEKEEPER_INTERNAL -v ./webui/cypress/videos:/e2e/cypress/videos/ kindlyops/cypress run
+            # creating dummy container to hold volume with outputs from cypress
+            docker create -v /e2e/cypress/videos/ --name videos alpine:3.4 /bin/true
+            docker run --network net0 -e GATEKEEPER_INTERNAL --volumes-from videos kindlyops/cypress run
+            docker cp videos:/e2e/cypress/videos ./webui/cypress/videos
       - store_artifacts:
           path: webui/cypress/videos
       - notify-failed
