--- a/webui/Caddyfile
+++ b/webui/Caddyfile
@@ -68,6 +68,16 @@ proxy /api/surveys havenapi:3000 {
   transparent
   header_upstream X-Forwarded-Proto {>X-Forwarded-Proto}
 }
+
+proxy /api/ipsative_surveys havenapi:3000 {
+  transparent
+  header_upstream X-Forwarded-Proto {>X-Forwarded-Proto}
+}
+
+proxy /api/likert_surveys havenapi:3000 {
+  transparent
+  header_upstream X-Forwarded-Proto {>X-Forwarded-Proto}
+}
 # this rewrite makes it so anything we are not proxying to api or auth
 # is rewritten to index.html, so that the SPA is served. This is necessary
 # to support path-based-routing in a single page application in cases where
