Enable rolling updates for k8s deploys
lets get rid of some gratuitous downtime

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   name: havenapi
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 50%
   template:
     metadata:
       annotations:
