--- a/k8s/gatekeeper-deployment.yaml
+++ b/k8s/gatekeeper-deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   name: gatekeeper
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 50%
   template:
     metadata:
       annotations:
@@ -58,6 +63,14 @@ spec:
           ports:
             - containerPort: 8443
               protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /
+              scheme: https
+              port: 8443
+              initialDelaySeconds: 5
+              periodSeconds: 5
+              successThreshold: 1
           resources:
             limits:
               memory: 256Mi
