--- a/k8s/havenweb-deployment.yaml
+++ b/k8s/havenweb-deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   name: havenweb
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 50%
   template:
     metadata:
       annotations:
@@ -21,6 +26,13 @@ spec:
           ports:
             - containerPort: 80
               protocol: TCP
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+              initialDelaySeconds: 5
+              periodSeconds: 5
+              successThreshold: 1
           volumeMounts:
             - name: secret-volume
               mountPath: /certs/
