--- a/k8s/gatekeeper-deployment.yaml
+++ b/k8s/gatekeeper-deployment.yaml
@@ -66,7 +66,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /
-              scheme: https
+              scheme: HTTPS
               port: 8443
               initialDelaySeconds: 5
               periodSeconds: 5
